# subatomic

./: Cargo.toml  README.md  debug  entitlements-release.plist  entitlements.plist  release
icon.pxd/: metadata.info
icon.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
icon.pxd/data/: 2BBDD8D4-1B34-43D3-9AC6-85E5BE819906  63471ABA-BEB9-40C5-B379-B836E5842637  838A6CFF-6B89-4FCA-9B34-EBBF93D80125  E83DFB0B-D905-409B-83A8-80C712533369
icon.pxd/data/selectionForContentTransform/: meta
icon.pxd/data/selectionForContentTransform/shapeSelection/: path
scripts/: scripts.js  styles.js
src/: app.rs  mailbox.rs  main.rs  menu.rs  messages.rs  window.rs
src/mailbox/: mod.rs  toolbar.rs  view.rs
